<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>DemodulationSink</class>
 <widget class="QWidget" name="DemodulationSink">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>640</width>
    <height>480</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Demodulation Sink</string>
  </property>
  <layout class="QGridLayout" name="gridLayout_2">
   <item row="0" column="0">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QGroupBox" name="groupBox">
       <property name="minimumSize">
        <size>
         <width>150</width>
         <height>130</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>150</width>
         <height>130</height>
        </size>
       </property>
       <property name="title">
        <string>Wave Selector</string>
       </property>
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="0">
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
           <widget class="QRadioButton" name="demodulation_quaddemod_radio">
            <property name="text">
             <string>Quad demod</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QRadioButton" name="demodulation_lowpass_radio">
            <property name="text">
             <string>Low pass</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QRadioButton" name="demodulation_clockrecovery_radio">
            <property name="text">
             <string>Clock recovery</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QRadioButton" name="demodulation_bits_radio">
            <property name="text">
             <string>Bits</string>
            </property>
           </widget>
          </item>
         </layout>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <widget class="QWidget" name="sink" native="true"/>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
